// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no image keeps intact HTML without image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p>Hello</p>
  </body>
</html>
"
`;

exports[`no image keeps intact HTML without image with inline style and custom property 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p style=\\"--foo: bar\\">Hello</p>
  </body>
</html>
"
`;

exports[`no image malformed HTML without image 1`] = `
"<!DOCTYPE html>
<html>
  <p>Hello<br /><br />mister<br /></p>
</html>
"
`;
